[tool.poetry]
name = "kln_bot"
version = "0.1.0"
description = "Poetry project based on requirements.txt"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiofiles = "==24.1.0"
aiohttp = "==3.11.14"
aiosqlite = "==0.21.0"
beautifulsoup4 = "==4.13.4"
fuzzywuzzy = "==0.18.0"
httpx = "==0.28.1"
ncatbot = "==3.5.8"
PicImageSearch = "==3.12.4"
Pillow = "==10.4"
Requests = "==2.32.3"
ruamel-base = "==1.0.0"
websockets = "==10.4"
meme_generator = "==0.2.0"
[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
mypy = "^1.0"
flake8 = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
